changed math blocks to $$

--- a/notebooks/solving-odes-with-neural-networks.ipynb
+++ b/notebooks/solving-odes-with-neural-networks.ipynb
@@ -31,7 +31,7 @@
     "\\frac{dy}{dt} = \\sin (\\pi * t/2) - 0.1y\n",
     "$$\n",
     "\n",
-    "With the initial condition: \\(y(0) = 1\\).\n",
+    "With the initial condition: $y(0) = 1$.\n",
     "\n",
     "Using this, the method then estimates the change in the value of y for a given step size. Let us see this in action:\n"
    ]
